--- a/Photographer/Photographer.csproj
+++ b/Photographer/Photographer.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Runtime.Numerics" Version="4.3.0" />
+    <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
